--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/analytics": "^1.5.0",
     "pouchdb": "^7.3.1",
     "pouchdb-adapter-idb": "^7.3.1",
     "tailwindcss": "^4.1.11",
